--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="https://static.thenounproject.com/png/45868-200.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -51,7 +51,7 @@
                 <a href="#skill" class="nav-item nav-link">Skill</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="mailto:anaskhalid8173@gmail.com" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -408,7 +408,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Anas Developer</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="">Anas Khalid</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2025 Anas Khalid</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="">Anas Khalid</a>
             </p>
         </div>
     </div>
