--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Developer, Front End Developer, Backed End Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="anaskhalidCV.pdf" download="anaskhalidCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="AnasKhalidCV.pdf" download="anaskhalidCV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Web Designer Developer</h3>
-                    <p>I’m Anas Khalid, a Web Designer, Developer, and SEO enthusiast. I create responsive, user-friendly websites that not only look great but also rank higher through on-page optimization and keyword research. My goal is to deliver creative, performance-driven solutions that enhance online presence and engagement.</p>
+                    <p>I’m Anas Khalid, a Web Designer, Developer, and passionate about website optimization. I create responsive, user-friendly websites that not only look great but also perform well. With a focus on on-page optimization and basic keyword research, my goal is to deliver creative and performance-driven solutions that enhance online presence and engagement.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Anas Khalid</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">29 November 2006</span></h6></div>
@@ -228,7 +228,9 @@
     <!-- Skill End -->
 
 
-    <!-- Services Start
+    <!-- Services Start -->
+
+
     <div class="container-fluid pt-5" id="service">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -255,14 +257,14 @@
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-search service-icon bg-primary text-white mr-3"></i>
-                        <h4 class="font-weight-bold m-0">SEO</h4>
+                        <h4 class="font-weight-bold m-0">On page SEO</h4>
                     </div>
                     <p>I have expertise in SEO basics, including on-page optimization techniques such as keyword research, meta tags, and content optimization to improve your website's visibility and ranking on search engines.</p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     
     <!-- Services End -->
 
